commit:智能分析，包装质安要点